@@ -1,5 +1,8 @@
 2009-05-21  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>
 
+	* matchbox/core/mb-wm-object.c (mb_wm_object_init): Do not allocate
+	ObjectClasses and ObjectClassesInfo every time the function is called.
+
 	* matchbox/core/mb-wm-client.c (mb_wm_client_destroy): Free decor list
 	after unreffing the objects in the list.
 
